interface_DATA = index.xhtml \
                 manager.xhtml \
                 manager_vmcore_task_form.xhtml \
                 manager_usrcore_task_form.xhtml \
                 managertask.xhtml \
                 stats.xhtml

# interfacedir should probably be $$(pkgdatadir)/retrace
interfacedir =  $(datadir)/retrace-server

EXTRA_DIST = $(interface_DATA)
